# KalshiMarketMaker

./: .gitignore  .replit  Dockerfile  MCP_REFACTOR_PLAN.md  README.md  analysis.ipynb  analyze_results.py  backtest_config.py  backtest_engine.py  backtest_results_log.csv  backtester.py  config.yaml  direct_ticker_test.py  download_market_archive.py  grid_search.py  http_utils.py  inspect_csv.py  live_endpoint_tester.py  mm.py  optimal_market_scanner.py  pyproject.toml  requirements-legacy.txt  requirements.txt  runner.py  server.py  signature_debugger.py  test_auth.py  tradelog_KXCPI-25JUN-T0.2.csv  tradelog_KXCPI-25JUN-T0.3.csv  tradelog_KXCPIYOY-25JUN-T2.5.csv  tradelog_KXHIGHAUS-25JUL27-B96.5.csv  tradelog_KXHIGHDEN-25JUL27-B97.5.csv  tradelog_KXHIGHLAX-25JUL27-B71.5.csv
.github/workflows/: ci.yml
.ipynb_checkpoints/: analysis-checkpoint.ipynb
legacy/: README.md  _bootstrap.py  analyze_results.py  backtester.py  direct_ticker_test.py  grid_search.py  inspect_csv.py  live_endpoint_tester.py  optimal_market_scanner.py  runner.py  signature_debugger.py  test_auth.py
tests/: test_backtest_engine.py  test_mcp_server.py  test_server_tools.py
